[package]
edition = "2018"
name = "sparser"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
clap = {version = "3.1", features = ["derive"]}
futures = "0.3.21"
lazy_static = "1.4.0"
linya = "0.2.2"
log = "0.4.14"
num_cpus = "1.13.1"
rand = "0.8"
rayon = "1.5.1"
regex = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
simple_logger = "2.1.0"
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1.8"
tree-sitter = "0.19"
tree-sitter-go = "^0.19.0"
tree-sitter-java = "^0.19.0"
tree-sitter-javascript = "^0.19.0"
tree-sitter-python = "0.19.1"
tree-sitter-ruby = "^0.19.0"
tree-sitter-solidity = "0.0.3"
walkdir = "2"

[build-dependencies]
cc = "*"
